--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
   "author": "Rishabh Agarwal",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "locus": "^2.0.1",
     "method-override": "^3.0.0",
+    "moment": "^2.23.0",
     "mongoose": "^5.3.16",
+    "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
+    "nodemon": "^1.18.9",
     "particlesjs": "^2.2.3",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
